--- a/Views/Invoice/InvoicePrint.cshtml
+++ b/Views/Invoice/InvoicePrint.cshtml
@@ -1,4 +1,4 @@
-﻿@model Invoice.View_Models.InvoiceVM
+﻿@* @model Invoice.View_Models.InvoiceVM
 @{
     Layout = null; // Or use your layout page if applicable
 }
@@ -93,7 +93,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+</html> *@
 
 
 
@@ -111,7 +111,7 @@
 
 
 
-@* @model Invoice.View_Models.InvoiceVM
+ @model Invoice.View_Models.InvoiceVM
 @{
    
 }
@@ -146,7 +146,7 @@
         }
     </tbody>
 </table>
- *@
+ 
 
 
 
